# coursework1pacman

./: CMakeLists.txt
include/: Character.h  ConsoleBuffer.h  Game.h  GameConfig.h  Ghost.h  Pacman.h  Position.h  PowerUp.h  PowerUpEffect.h  PowerUpManager.h
src/: Character.cpp  ConsoleBuffer.cpp  Game.cpp  GameConfig.cpp  Ghost.cpp  Pacman.cpp  Position.cpp  PowerUp.cpp  PowerUpManager.cpp  main.cpp
